--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-ui-notification": "^0.3.6"
+    "angular-ui-notification": "^0.3.6",
+    "angular-bootstrap": "^2.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
